--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@web3forms/react": "^1.1.3",
+    "framer-motion": "^12.15.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.56.4",
     "react-router-dom": "^6.22.3",
     "react-transition-group": "^4.4.5"
   },
